<resources>
    <string name="app_name">Pets++</string>
    <string name="breeder_listing_page">Breeder Listing Page</string>
    <string name="cost">Cost: %s</string>
    <string name="quantity">Quantity: %d</string>
    <string name="str_brand">brand</string>
    <string name="str_model">model</string>
    <string name="str_cost">cost</string>
    <string name="str_quantity">quantity</string>
    <string name="str_save">Save</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_delete">Delete</string>
    <string name="str_add">Add</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="str_log_in">log in</string>
    <string name="register">Register</string>
    <string name="confirm_password">confirm password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First name:</string>
    <string name="john">John</string>
    <string name="deere">Deere</string>
    <string name="last_name">Last name:</string>
    <string name="phone_number">Phone number:</string>
    <string name="address_line_1">Address line 1:</string>
    <string name="address_line_2">Address line 2:</string>
    <string name="_123_12th_ave_n">123 12th Ave N</string>
    <string name="_0123_456_789">0123456789</string>
    <string name="city">City:</string>
    <string name="lynnwood">Lynnwood</string>
    <string name="state">State:</string>
    <string name="wa">WA</string>
    <string name="zip_code">Zip code:</string>
    <string name="_98037">98037</string>
    <string name="are_you_a_pet_breeder">Are you a pet breeder?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="greeting">Greeting:</string>
    <string name="general_kenobi">Hello there!</string>
    <string name="save_changes">Save changes</string>
    <string name="cancel_changes">Cancel Changes</string>
    <string name="apartment_numbers_etc">Apartment numbers, etc.</string>
    <string name="number_of_pets">Number of pets:</string>
    <string name="_2">2</string>
    <string name="breeder_index_number">Breeder index number:</string>
    <string name="replace_your_profile_picture_button">Replace your profile picture button</string>
    <string name="_12">12</string>
    <string name="pet_listing_page">Pet Listing Page</string>
    <string name="action_switch_user">Switch User</string>
    <string name="dialog_switch_yes">Yes</string>
    <string name="dialog_switch_no">No</string>
    <string name="dialog_switch_message">Log out and log in with another account?</string>
    <string name="str_pet_greeting">"\"" + ${petList[position].petGreeting} + "\""</string>
    <string name="quot_user_s_profile_picture_quot">\"User\'s profile picture\"</string>
    <string name="quot_profile_picture_of_a_pet_quot">\"Profile picture of a pet\"</string>
    <string name="edit_breeder">Edit Breeder</string>
    <string name="email_example_com">email@example.com</string>
    <string name="email">Email:</string>
    <string name="pet_index_number">Pet index number:</string>
    <string name="woof_woof">Woof woof!</string>
    <string name="slash">/</string>
    <string name="birthday">Birthday:</string>
    <string name="available_to_breed">Available to breed:</string>
    <string name="dog">Dog</string>
    <string name="pet_type">Pet type:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sex">Sex:</string>
    <string name="pet_name">Pet name:</string>
    <string name="golden_retriever">Golden retriever</string>
    <string name="age">Age:</string>
    <string name="fluffy">Fluffy</string>
    <string name="_6">6</string>
    <string name="breed">Breed:</string>
    <string name="pet_age">Pet age:</string>
    <string name="scout">Scout</string>
    <string name="yyyy">YYYY</string>
    <string name="dd">DD</string>
    <string name="mm">MM</string>
    <string name="add_pet">Add pet</string>
    <string name="edit_pet">Edit Pet</string>
    <string name="delete_pet">Delete Pet</string>
</resources>