<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".BlankFragment">

        <TextView
            android:id="@+id/txt_num_pets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/number_of_pets"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_pet_index_number" />

        <TextView
            android:id="@+id/txt_num_pets_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/_2"
            app:layout_constraintBottom_toBottomOf="@+id/txt_num_pets"
            app:layout_constraintStart_toEndOf="@+id/txt_num_pets"
            app:layout_constraintTop_toTopOf="@+id/txt_num_pets" />

        <TextView
            android:id="@+id/txt_address_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/city"
            android:textSize="20sp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_address_street" />

        <TextView
            android:id="@+id/txt_pet_index_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/breeder_index_number"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_replace_photo" />

        <TextView
            android:id="@+id/txt_address_street"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/address_line_1"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_phone_number" />

        <TextView
            android:id="@+id/txt_address_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/state"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_address_city" />

        <EditText
            android:id="@+id/edt_address_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/wa"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_address_state"
            app:layout_constraintStart_toEndOf="@+id/txt_address_state"
            app:layout_constraintTop_toTopOf="@+id/txt_address_state"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/txt_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/phone_number"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_contact_email" />

        <EditText
            android:id="@+id/edt_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/deere"
            android:inputType="text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_last_name"
            app:layout_constraintStart_toEndOf="@+id/txt_last_name"
            app:layout_constraintTop_toTopOf="@+id/txt_last_name"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <EditText
            android:id="@+id/edt_address_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/lynnwood"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_address_city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_address_city"
            app:layout_constraintTop_toTopOf="@+id/txt_address_city"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,TextContrastCheck" />

        <EditText
            android:id="@+id/edt_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/john"
            android:inputType="text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_pet_name_display"
            app:layout_constraintStart_toEndOf="@+id/txt_pet_name_display"
            app:layout_constraintTop_toTopOf="@+id/txt_pet_name_display"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/btn_replace_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/replace_your_profile_picture_button"
            android:src="@drawable/replace_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RedundantDescriptionCheck,ImageContrastCheck" />

        <TextView
            android:id="@+id/txt_address_zip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/zip_code"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_address_state" />

        <EditText
            android:id="@+id/edt_address_street"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/_123_12th_ave_n"
            android:inputType="textPersonName"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_address_street"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_address_street"
            app:layout_constraintTop_toTopOf="@+id/txt_address_street"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/txt_pet_index_number_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/_12"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/txt_pet_index_number"
            app:layout_constraintStart_toEndOf="@+id/txt_pet_index_number"
            app:layout_constraintTop_toTopOf="@+id/txt_pet_index_number" />

        <TextView
            android:id="@+id/txt_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/last_name"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_pet_name_display" />

        <EditText
            android:id="@+id/edt_phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:autofillHints=""
            android:inputType="phone"
            android:ems="10"
            android:hint="@string/_0123_456_789"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_phone_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_phone_number"
            app:layout_constraintTop_toTopOf="@+id/txt_phone_number"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/txt_pet_name_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/first_name"
            android:textSize="20sp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_num_pets" />

        <TextView
            android:id="@+id/txt_breeder_greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/greeting"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_address_zip" />

        <EditText
            android:id="@+id/edt_address_zip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/_98037"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_address_zip"
            app:layout_constraintStart_toEndOf="@+id/txt_address_zip"
            app:layout_constraintTop_toTopOf="@+id/txt_address_zip"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,TextContrastCheck" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/black"
            android:text="@string/save_changes"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_breeder_greeting" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/light_gray"
            android:text="@string/cancel_changes"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_save"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/edt_breeder_greeting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/general_kenobi"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_breeder_greeting"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_breeder_greeting"
            app:layout_constraintTop_toTopOf="@+id/txt_breeder_greeting"
            tools:ignore="TextContrastCheck"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/txt_contact_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/email"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/txt_last_name"
            app:layout_constraintTop_toBottomOf="@+id/txt_last_name"
            tools:text="Email: " />

        <EditText
            android:id="@+id/edt_contact_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="10"

            android:hint="@string/email_example_com"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_contact_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_contact_email"
            app:layout_constraintTop_toTopOf="@+id/txt_contact_email"
            tools:ignore="TextContrastCheck"
            android:importantForAutofill="no" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

